<resources>
    <string name="app_name">IIIT Sri City</string>
    <string name="login">Let\'s Sign You In</string>
    <string name="welcome_login">Welcome back ,you\'ve been missed</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="no_acc">Don\'t have a account?</string>
    <string name="getting_started">Getting started</string>
    <string name="create_acc">Create a account to Continue!</string>
    <string name="already_acc">Already Have a Account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_Note">Are you sure want to delete\n This Note?</string>
    <!--    Chat Section-->
    <string name="chat_name">Chats</string>
    <string name="splash_chat_quote">All in one Chatting Section for IIIT Mascot</string>
    <string name="Developer">Pratik Agrawal</string>
    <string name="Exit_from_chats">Are you sure want\n Log Out?</string>
    <string name="title_activity_create_post">createPost</string>
    <string name="post_image">Post Image</string>
    <string name="user_image">User Image</string>
    <string name="more_options">More Options</string>
    <string name="select_ug_programs">Select Groups</string>
    <string name="select">Select Subgroups</string>
    <string name="select_ug_program">Select UG Program</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_section">Select Section</string>
    <string name="select_day_of_week">Select Day of the Week</string>

    <string-array name="categories_array">
        <item>Sports</item>
        <item>Music</item>
        <item>Art</item>
        <item>Science</item>
        <item>Technology</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


</resources>