<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darktheme_back"
    tools:context=".chatapp.Splash_chatapp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/logo_splash_chatapp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chat_name"
            android:textColor="@color/white"
            android:fontFamily="@font/spartan_bold"
            android:textSize="@dimen/_25sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/splash_chat_quote"
            android:textColor="@color/white"
            android:fontFamily="@font/spartan_thin"
            android:textSize="@dimen/_10sdp"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="From"
            android:textColor="@color/white"
            android:fontFamily="@font/spartan_thin"
            android:textSize="@dimen/_10sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Developer"
            android:textColor="@color/white"
            android:fontFamily="@font/spartan_regular"
            android:textSize="@dimen/_10sdp"/>
    </LinearLayout>


</RelativeLayout>