<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_5sdp"
    android:background="@color/background_color">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_5sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/postImage"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_height"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/description"
                android:src="@drawable/placeholder_image"
                android:contentDescription="@string/post_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/card_margin"
                app:layout_constraintBottom_toBottomOf="@id/postImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical"
                android:background="@drawable/gradient_overlay">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userimage"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/profile"
                    android:layout_marginEnd="@dimen/card_margin"
                    android:contentDescription="@string/user_image" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2D Artist"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/more_options"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/ic_more_vert"
                    app:tint="@color/white"
                    android:contentDescription="@string/more_options" />
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:text="Laurie Rodriguez: Abstract glass crystal with a bit of dispersion on podium... more"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:maxLines="3"
                android:ellipsize="end"
                app:layout_constraintTop_toBottomOf="@id/postImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="@dimen/card_margin"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
