<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/getting_started"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/create_acc"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/emailbox_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_rounded_corners"
            android:fontFamily="@font/poppins_light"
            android:hint="abc@example.com"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/emailbox_register"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/passwordbox_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_rounded_corners"
            android:fontFamily="@font/poppins_light"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/post_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Your field of Interest:"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/passwordbox_register"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/post_selector_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Post"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/orange"
            app:counterTextColor="@color/white"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:placeholderTextColor="@color/edittext"
            app:layout_constraintTop_toBottomOf="@+id/post_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                android:id="@+id/post_selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_light"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:elevation="10dp"
            android:onClick="register_with_mail"
            app:cardBackgroundColor="@color/orange"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/post_selector_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Sign Up"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <ProgressBar
                    android:id="@+id/signup_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/already_acc"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/poppins_medium"
                android:onClick="open_login"
                android:text="Sign In"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/google_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/edittext_rounded_corners"
            android:clickable="true"
            android:gravity="center"
            android:visibility="gone"
            android:onClick="signup"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/google" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/continue_with_google"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
